# simulation_codes

./: README.md  ideal_gas.ipynb  main.py  particle_in_cell.py  virus_simulation.py
virus/: CMakeLists.txt  main.cpp
